# CRAIC_SmartPharmacy

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  GIT_WORKFLOW.md  README.en.md  README.md  clean_ws.sh  docker-compose.yml  lh.txt  sync_to_robot.sh
control_ws/: README.md  q.md
control_ws/src/license_plate_ocr/: CMakeLists.txt  package.xml
control_ws/src/license_plate_ocr/launch/: ocr_server.launch
control_ws/src/license_plate_ocr/scripts/: license_plate_server.py  test_ocr_client.py
control_ws/src/license_plate_ocr/srv/: LicensePlateOCR.srv
control_ws/src/move_nav/: CMakeLists.txt  package.xml
control_ws/src/move_nav/launch/: car_tcp_bridge.launch  car_tcp_bridge_car1.launch  car_tcp_bridge_car2.launch  control.launch  judgement_tcp_sender.launch  yaofang_msg_mock.launch  yaofang_service_mock.launch
control_ws/src/move_nav/msg/: JudgementReport.msg  SampleOrder.msg  TaskRequest.msg  TaskResult.msg
control_ws/src/move_nav/scripts/: car_tcp_bridge.py  judgement_tcp_sender.py
control_ws/src/move_nav/src/: F1_yaofang_2510.py  control_node.cpp  control_node_yaofang_msg_template.cpp  control_node_yaofang_service_template.cpp  control_node_yaofang_template.cpp  smartcommunity_control_node.cpp
control_ws/src/move_nav/srv/: Board1Decode.srv  Board2Decode.srv
control_ws/src/qr_code_recognition/: CMakeLists.txt  README.md  package.xml  qr_node.py  qr_parser.py
control_ws/src/qr_code_recognition/launch/: qr.launch
control_ws/src/qr_code_recognition/scripts/: qr_decoder.py  qr_node.py  qr_parser.py
control_ws/src/text_recognition/: CMakeLists.txt  README.md  package.xml
control_ws/src/text_recognition/launch/: ocr_service.launch
control_ws/src/text_recognition/scripts/: ocr_node.py  ocr_service.py
control_ws/src/yolo_onnx_ros/: CMakeLists.txt  package.xml
control_ws/src/yolo_onnx_ros/launch/: yolo_camera.launch
control_ws/src/yolo_onnx_ros/scripts/: camera_client.py  camera_publisher.py  yolo_onnx_service_node.py  yolo_onnx_topic_node.py
control_ws/src/yolo_onnx_ros/srv/: ObjectDetection.srv
control_ws/world/: world
docker/: entrypoint.sh
nav_real_ws/: NAV_REAL_WS.md  QUICKSTART.md
nav_real_ws/src/car_sim/: package.xml
nav_real_ws/src/car_sim/launch/: amcl.launch  amcl_sim.launch  car_urdf.launch  gmapping.launch  gmapping_sim.launch  hector.launch  hector_real.launch  map_save.launch  map_server.launch  move_base.launch  nav_real.launch  nav_real_amcl.launch  nav_real_amcl_with_remap.launch  nav_real_hector.launch  nav_real_hector_with_remap.launch  nav_real_with_remap.launch  nav_sim.launch
nav_real_ws/src/car_sim/map/: map_sim.pgm
nav_real_ws/src/car_sim/param/: base_local_planner_params_BASE.yaml  base_local_planner_params_DWA.yaml  base_local_planner_params_TEB.yaml  costmap_common_params.yaml  eband_planner_params.yaml  local_costmap_params.yaml
nav_real_ws/src/car_sim/rviz/: nav.rviz
nav_real_ws/src/my_local_planner/: CMakeLists.txt  my_local_planner_plugin.xml
nav_real_ws/src/my_local_planner/src/: my_local_planner.cpp
nav_real_ws/src/robot_description/car_simple/: CMakeLists.txt
nav_real_ws/src/robot_description/car_simple/urdf/: car_simple.urdf
nav_real_ws/src/topic_remap_ros/: CMakeLists.txt  README.md  package.xml
nav_real_ws/src/topic_remap_ros/launch/: topic_remap_default.launch
nav_real_ws/src/topic_remap_ros/scripts/: topic_remap_node.py
nav_real_ws/src/yaofang_world/: CMakeLists.txt  package.xml
nav_real_ws/src/yaofang_world/models/yaofang/: model.config  model.sdf
nav_real_ws/src/yaofang_world/models/yaofang/materials/scripts/: floor.material
nav_sim_ws/: QUICKSTART.md  README.md
nav_sim_ws/src/car_sim/: CMakeLists.txt  package.xml
nav_sim_ws/src/car_sim/launch/: amcl.launch  car_urdf.launch  hector.launch  hector_sim.launch  move_base.launch  move_base_mylocalplaner.launch
nav_sim_ws/src/car_sim/map/: map_sim.yaml
nav_sim_ws/src/car_sim/param/: base_local_planner_params_TEB.yaml  costmap_common_params.yaml  ekf.yaml  global_costmap_params.yaml  local_costmap_params.yaml  my_local_planner_params.yaml
nav_sim_ws/src/car_sim/rviz/: nav.rviz
nav_sim_ws/src/my_local_planner/: package.xml
nav_sim_ws/src/my_local_planner/include/my_local_planner/: my_local_planner.h
nav_sim_ws/src/robot_description/car_simple/: package.xml
nav_sim_ws/src/robot_description/car_simple/urdf/: car_simple.urdf
nav_sim_ws/src/yaofang_world/models/yaofang/: model.sdf
nav_sim_ws/src/yaofang_world/worlds/: yaofang.world
nav_sim_ws/tools/: map_to_gazebo_pose.py
robot_ws/: README.md
robot_ws/src/eprobot_chassis_bringup/: CMakeLists.txt  README.md  package.xml
robot_ws/src/eprobot_chassis_bringup/launch/: chassis.launch
