<?xml version="1.0"?>
<package format="2">
  <name>my_local_planner</name>
  <version>0.0.1</version>
  <description>A custom local planner for ROS navigation stack</description>
  
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>base_local_planner</depend>
  <depend>angles</depend>
  
  <export>
    <nav_core plugin="${prefix}/my_local_planner_plugin.xml"/>
  </export>
</package>