<package format="2">
  <name>car_simple</name>
  <version>1.0.0</version>
  <description>Simple box-body car model for navigation simulation</description>

  <maintainer email="todo@example.com">todo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>

  <export>
    <architecture_independent />
  </export>
</package>
